objects/CN_Gaode_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Geolocation_Endpoint__c</fullName>
        <label>Geolocation_Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JS_Key__c</fullName>
        <label>JS_Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer100_Icon_Name__c</fullName>
        <label>Layer100 Icon Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer20_Icon_Name__c</fullName>
        <label>Layer20 Icon Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer50_Icon_Name__c</fullName>
        <label>Layer50 Icon Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Icon_Name__c</fullName>
        <label>Prospect Icon Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undefined_Icon_Name__c</fullName>
        <label>Undefined_Icon_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Key__c</fullName>
        <label>Web_Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CN_Gaode_Setting</label>
</CustomObject>